# mlspec-lib

./: .envrc  .flake8  .gitignore  .pylintrc  Makefile  Pipfile  README.md  README.rst  build_submit_package.sh  cspell.json  merge-all-branches.sh  merge_all_prs.py  pyproject.toml  requirement.txt  requirements.txt  setup.py  yaml_scratch.py
.cspell/: custom-dictionary.txt
.github/: autorebase.yml
.github/workflows/: codeql-analysis.yml  codeql.yml
docs/: conf.py
mlspeclib/: README.md  __init__.py  core.py  enums.py  helpers.py  io.py  metadatavalidator.py  mlobject.py  mlobjects.py  mlschema.py  mlschemaenums.py  mlschemafields.py  mlschemavalidators.py  mlspeclib.py  schemacatalog.py  schemadict.py  schemaenums.py  schemavalidator.py  util.py  validators.py
mlspeclib/experimental/: cosmos_credentials_sample copy.yaml  cosmos_helpers.py  github.py  gremlin_credentials_sample.yaml  gremlin_helpers.py  metastore.py
notebook/: SampleNotebook.ipynb  opendp.yaml  train.py  workflow_definitio.yaml
notebook/29c9d910-bd8d-4400-85c0-91d478174490/: 0_0_1_datapath-2020-04-17T14:28:44.580020
scripts/: update_all_pyproject.py
tests/: context.py  sample_schemas.py  sample_submissions.py  test_advanced.py  test_basic.py  test_e2e.py  test_github_schemas.py  test_gremlinclient.py  test_helpers.py  test_io.py  test_live_schemas.py  test_metadatavalidators.py  test_mlobject.py  test_mlobjects.py  test_mlschema.py  test_mlschemavalidators.py  test_schema_catalog.py  test_schema_dict.py  test_schemas.py  test_validators.py
tests/data/: container_store.yaml  datapath.yaml  (+8 more)
(+58 files in other folders)
